--- a/styles/partials/_components.scss
+++ b/styles/partials/_components.scss
@@ -171,20 +171,22 @@ button {
 .modal-container {
 
     z-index: - 10;
-    width: 952px;
+    width: 1004px;
     height: 552px;
     margin: auto;
     opacity: 0;
+    padding-left: 52px;
     @include transition(opacity);
     
     @include media-tablet {
-        width: 682px;
+        width: 734px;
         height: 402px;
     }
 
     @include media-mobile {
-        width: 270px;
+        width: 301px;
         height: 393px;
+        padding-left: 31px;
     }
 
     &.active {
@@ -244,7 +246,8 @@ button {
     overflow: auto;
     &::-webkit-scrollbar {
         width: 8px;
-      }
+    }
+
     padding: 50px 20px 10px 29px;
     @include flex ($flexdir: column, $justifycont: flex-start, $alignitems: flex-start);
 
